--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "w3"]
 	path = w3
 	url = git://git.sv.gnu.org/w3.git
+[submodule "emacs-quickrun"]
+	path = emacs-quickrun
+	url = git://github.com/syohex/emacs-quickrun.git
