touch .gitmodules 4 org-sync

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git://github.com/tsgates/git-emacs.git
 [submodule "org-sync"]
 	path = org-sync
-	url = git://github.com/emacsmirror/org-sync.git
+	url = git://github.com/gitithan/org-sync.git
 [submodule "emacs-quickrun"]
 	path = emacs-quickrun
 	url = git://github.com/syohex/emacs-quickrun.git
